--- a/index.html
+++ b/index.html
@@ -1,3 +1,63 @@
 <html>
-hello, world!
+
+<head>
+<title> Nuova tabella </title>
+<link rel="stylesheet" href="https://cs.unibg.it/bootstrap.min.css">
+</head>
+
+<body>
+
+<nav class="navbar navbar-inverse">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="cs.unibg.it"> Ingegneria informatica </a>
+		</div>
+		<ul class="nav navbar-nav">
+			<li> <a href="cs.unibg.it/parabosc"> Paraboschi </a> </li>
+			<li> <a href="cs.unibg.it/gargantini"> Gargantini </a> </li>
+			<li> <a href="cs.unibg.it/scandurra"> Scandurra </a> </li>
+			<li> <a href="cs.unibg.it/salvaneschi"> Salvaneschi </a> </li>
+		</ul>
+	</div>
+</nav>
+
+<div class="container">
+	<div class="row">
+		<div class="col-lg-3 col-md-6 col-sm-12">
+			<div class="text-center well">
+				<h2> Basi di Dati e Web </h2>
+				<p> Stefano Paraboschi </p>
+			</div>
+		</div>
+		<div class="col-lg-3 col-md-6 col-sm-12">
+			<div class="text-center well">
+				<h2> Programmazione Ad Oggetti </h2>
+				<p> Angelo Gargantini </p>
+			</div>
+		</div>
+		<div class="col-lg-3 col-md-6 col-sm-12">
+			<div class="text-center well">
+				<h2> Algoritmi e strutture </h2>
+				<p> Patrizia Scandurra </p>
+			</div>
+		</div>
+		<div class="col-lg-3 col-md-6 col-sm-12">
+			<div class="text-center well">
+				<h2> Ingegneria del Software </h2>
+				<p> Paolo Salvaneschi </p>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+<div class="col-lg-8 col-md-12 col-sm-12 col-lg-push-2">
+	<div class="embed-responsive embed-responsive-16by9">
+		<iframe src="https://www.youtube.com/embed/rzpeuX8zWoE" allowfullscreen></iframe>
+	</div>
+</div>
+</div>
+
+</body>
+
 </html>
